Fix website: Add CSS styling, JavaScript functionality, and proper branding

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
     <!-- ...existing code... -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 My Local Website. All rights reserved.</p>
-            <a href="http://localhost:5000" target="_blank">Visit the Issues Dashboard</a>
+            <p>&copy; 2025 RMC - Resource Management Center. All rights reserved.</p>
         </div>
     </footer>
 
