Fix Daily Count button to open in current tab instead of new tab

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="description">Streamline your daily counts and resource management with our powerful, easy-to-use web application. Track, analyze, and optimize your daily operations.</p>
                 
                 <div class="cta-buttons">
-                    <a href="https://script.google.com/macros/s/AKfycbyZwQrxxXeDnT1llTZb3h7Mj059z4y_3JuKnmQ2p5yIdQXbxttoDblg4coapbSy-gkq/exec" target="_blank" class="primary-btn">
+                    <a href="https://script.google.com/macros/s/AKfycbyZwQrxxXeDnT1llTZb3h7Mj059z4y_3JuKnmQ2p5yIdQXbxttoDblg4coapbSy-gkq/exec" class="primary-btn">
                         <i class="fas fa-rocket"></i>
                         Launch App Now
                     </a>
@@ -180,7 +180,7 @@
                     <div class="download-card">
                         <h3>Web Application</h3>
                         <p>Access directly from your browser</p>
-                        <a href="https://script.google.com/macros/s/AKfycbyZwQrxxXeDnT1llTZb3h7Mj059z4y_3JuKnmQ2p5yIdQXbxttoDblg4coapbSy-gkq/exec" target="_blank" class="download-btn">
+                        <a href="https://script.google.com/macros/s/AKfycbyZwQrxxXeDnT1llTZb3h7Mj059z4y_3JuKnmQ2p5yIdQXbxttoDblg4coapbSy-gkq/exec" class="download-btn">
                             <i class="fas fa-external-link-alt"></i>
                             Launch App
                         </a>
