--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RMC</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RMC - Material Entry</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -12,70 +14,324 @@
     }
 
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Roboto', sans-serif;
       height: 100vh;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    /* Status Bar */
+    .status-bar {
+      height: 24px;
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      display: flex;
+      justify-content: space-between;
       align-items: center;
-      background: linear-gradient(135deg, #e0f7fa, #ffffff);
+      padding: 0 12px;
+      font-size: 12px;
+      font-weight: 500;
     }
 
-    .app-container {
+    .status-left {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .status-right {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    /* App Bar */
+    .app-bar {
+      height: 56px;
+      background: #3f51b5;
+      color: white;
+      display: flex;
+      align-items: center;
+      padding: 0 16px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      position: relative;
+    }
+
+    .logo {
+      width: 40px;
+      height: 40px;
       background: white;
-      padding: 40px 30px;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      width: 90%;
-      max-width: 400px;
-    }
-
-    h1 {
-      color: #2c3e50;
-      font-size: 32px;
-      margin-bottom: 20px;
-      font-weight: 600;
-    }
-
-    button {
-      padding: 12px 24px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 12px;
+      font-weight: bold;
+      color: #3f51b5;
       font-size: 18px;
+    }
+
+    .app-title {
+      font-size: 20px;
+      font-weight: 500;
+      flex: 1;
+    }
+
+    .menu-icon {
+      padding: 8px;
       cursor: pointer;
-      background-color: #4CAF50;
+      border-radius: 50%;
+      transition: background-color 0.2s;
+    }
+
+    .menu-icon:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    /* Main Content */
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      background: #f5f5f5;
+      position: relative;
+    }
+
+    .content-area {
+      flex: 1;
+      padding: 24px 16px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 32px 24px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      text-align: center;
+      width: 100%;
+      max-width: 320px;
+      margin-bottom: 24px;
+    }
+
+    .counter-display {
+      font-size: 48px;
+      font-weight: 300;
+      color: #3f51b5;
+      margin-bottom: 8px;
+      font-family: 'Roboto', monospace;
+    }
+
+    .counter-label {
+      font-size: 16px;
+      color: #666;
+      margin-bottom: 24px;
+      font-weight: 400;
+    }
+
+    .status-message {
+      font-size: 14px;
+      color: #4caf50;
+      margin-top: 12px;
+      min-height: 20px;
+      font-weight: 500;
+    }
+
+    /* Floating Action Button */
+    .fab {
+      position: fixed;
+      bottom: 16px;
+      right: 16px;
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      background: #ff5722;
+      border: none;
+      color: white;
+      font-size: 24px;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      transition: all 0.3s ease;
+      z-index: 1000;
+    }
+
+    .fab:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
+    }
+
+    .fab:active {
+      transform: scale(0.95);
+    }
+
+    /* Primary Button */
+    .primary-button {
+      background: linear-gradient(45deg, #3f51b5, #5c6bc0);
       color: white;
       border: none;
-      border-radius: 8px;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-    }
-
-    button:hover {
-      background-color: #43a047;
-      transform: scale(1.05);
-    }
-
-    #counter {
-      margin-top: 25px;
-      font-size: 28px;
-      color: #333;
+      padding: 14px 32px;
+      border-radius: 24px;
+      font-size: 16px;
       font-weight: 500;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(63, 81, 181, 0.3);
       transition: all 0.3s ease;
+      min-width: 200px;
     }
 
-    .fade {
-      animation: fadeIn 0.4s ease;
+    .primary-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 16px rgba(63, 81, 181, 0.4);
+    }
+
+    .primary-button:active {
+      transform: translateY(0);
+    }
+
+    .primary-button:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
+    }
+
+    /* Watermark */
+    .watermark {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      padding: 8px 16px;
+      font-size: 12px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .watermark-left {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
+
+    .watermark-right {
+      font-weight: 500;
+      color: #64b5f6;
+    }
+
+    /* Animations */
+    .fade-in {
+      animation: fadeIn 0.5s ease;
+    }
+
+    .pulse {
+      animation: pulse 0.6s ease;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    /* Loading animation */
+    .loading {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 2px solid #f3f3f3;
+      border-top: 2px solid #3f51b5;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-left: 8px;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    /* Responsive Design */
+    @media (max-width: 480px) {
+      .content-area {
+        padding: 16px 12px;
+      }
+      
+      .card {
+        padding: 24px 16px;
+        margin-bottom: 80px;
+      }
+      
+      .counter-display {
+        font-size: 40px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="app-container">
-    <h1>RMC</h1>
-    <button onclick="startDailyCount()">Start Daily Count</button>
-    <div id="counter">Daily Count: 0</div>
+  <!-- Status Bar -->
+  <div class="status-bar">
+    <div class="status-left">
+      <span id="current-time">9:41</span>
+    </div>
+    <div class="status-right">
+      <i class="fas fa-signal"></i>
+      <i class="fas fa-wifi"></i>
+      <span>100%</span>
+      <i class="fas fa-battery-full"></i>
+    </div>
+  </div>
+
+  <!-- App Bar -->
+  <div class="app-bar">
+    <div class="logo">RMC</div>
+    <div class="app-title">Material Entry</div>
+    <div class="menu-icon">
+      <i class="fas fa-ellipsis-v"></i>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <div class="main-content">
+    <div class="content-area">
+      <div class="card fade-in">
+        <div class="counter-display" id="counter-display">0</div>
+        <div class="counter-label">Daily Count</div>
+        <button class="primary-button" id="count-button" onclick="startDailyCount()">
+          <i class="fas fa-plus"></i> Start Daily Count
+        </button>
+        <div class="status-message" id="status-message"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Floating Action Button -->
+  <button class="fab" onclick="resetCount()" title="Reset Count">
+    <i class="fas fa-refresh"></i>
+  </button>
+
+  <!-- Watermark -->
+  <div class="watermark">
+    <div class="watermark-left">
+      <div>Department: Commercial Team</div>
+      <div>Modify Admin: WAYLR</div>
+    </div>
+    <div class="watermark-right">
+      <i class="fab fa-github"></i> GitHub Pages
+    </div>
   </div>
 
   <script>
