--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       <div>Modify Admin: WAYLR</div>
     </div>
     <div class="watermark-right">
-      <i class="fab fa-github"></i> GitHub Pages
+      <i class="fas fa-building"></i> RMC Commercial
     </div>
   </div>
 
