Update watermark admin to Lakshan and enhance Info button with contact details

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   <div class="watermark">
     <div class="watermark-left">
       <div>Department: Commercial Team</div>
-      <div>Modify Admin: WAYLR</div>
+      <div>Modify Admin: Lakshan</div>
     </div>
     <div class="watermark-right">
       <i class="fas fa-building"></i> RMC Commercial
@@ -286,7 +286,14 @@
 
     // Placeholder functions for grid icons
     function openInfo() {
-      alert('Info: Material Entry Application\nVersion: 1.0\nDeveloped by: WAYLR');
+      alert('🏢 RMC Commercial - Material Entry Application\n\n' +
+            '📋 Application Details:\n' +
+            '• Version: 1.0\n' +
+            '• Department: Commercial Team\n\n' +
+            '👨‍💼 Admin Information:\n' +
+            '• Modify Admin: Lakshan\n' +
+            '• Contact: 0772892711\n\n' +
+            '🌐 Platform: RMC Commercial Web Portal');
     }
 
     function openSettings() {
