--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RMC - Home</title>
+  <title>RMC - Daily Counting Start</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -229,8 +229,8 @@
       <div class="app-icon" onclick="launchApp()">
         <i class="fas fa-cubes"></i>
       </div>
-      <div class="app-name slide-up">Material Entry</div>
-      <div class="app-description slide-up">Seamlessly track and manage material entries with our intuitive web application. Get started with our easy-to-use interface.</div>
+      <div class="app-name slide-up">Daily Counting Start</div>
+      <div class="app-description slide-up">Start your daily counting process with our efficient tracking system. Monitor and record daily activities seamlessly.</div>
       <a href="https://script.google.com/macros/s/AKfycbyZwQrxxXeDnT1llTZb3h7Mj059z4y_3JuKnmQ2p5yIdQXbxttoDblg4coapbSy-gkq/exec" class="launch-button slide-up">
         <i class="fas fa-play"></i> Launch Application
       </a>
@@ -286,7 +286,7 @@
 
     // Placeholder functions for grid icons
     function openInfo() {
-      alert('🏢 RMC Commercial - Material Entry Application\n\n' +
+      alert('🏢 RMC Commercial - Daily Counting Start\n\n' +
             '📋 Application Details:\n' +
             '• Version: 1.0\n' +
             '• Department: Commercial Team\n\n' +
@@ -299,7 +299,7 @@
     function openSettings() {
       alert('⚙️ Application Settings\n\n' +
             '🔧 Web Application Configuration:\n' +
-            '• Material Entry System: Active\n' +
+            '• Daily Counting Start: Active\n' +
             '• Data Sync: Real-time\n' +
             '• Auto-save: Enabled\n\n' +
             '🌐 Connection Status:\n' +
