--- a/index.html
+++ b/index.html
@@ -71,21 +71,44 @@
     }
 
     .app-icon {
-      width: 120px;
-      height: 120px;
-      background: linear-gradient(145deg, #ffffff, #f8f9fa);
-      border-radius: 24px;
+      width: 140px;
+      height: 140px;
+      background: linear-gradient(145deg, #ffffff 0%, #f0f2f5 50%, #ffffff 100%);
+      border-radius: 28px;
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1), 0 4px 15px rgba(0, 0, 0, 0.05);
-      margin-bottom: 24px;
+      box-shadow: 
+        0 20px 40px rgba(0, 0, 0, 0.12),
+        0 8px 16px rgba(0, 0, 0, 0.08),
+        inset 0 1px 2px rgba(255, 255, 255, 0.9),
+        inset 0 -1px 2px rgba(0, 0, 0, 0.05);
+      margin-bottom: 32px;
       cursor: pointer;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      padding: 16px;
-      border: 3px solid rgba(255, 255, 255, 0.9);
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      padding: 20px;
+      border: 4px solid rgba(255, 255, 255, 0.95);
       position: relative;
       overflow: hidden;
+      animation: iconFloat 6s ease-in-out infinite;
+    }
+
+    /* Icon Glow Effect */
+    .app-icon::after {
+      content: '';
+      position: absolute;
+      inset: -4px;
+      background: linear-gradient(45deg, 
+        rgba(102, 126, 234, 0.4) 0%,
+        rgba(118, 75, 162, 0.4) 25%,
+        rgba(255, 107, 107, 0.4) 50%,
+        rgba(76, 175, 80, 0.4) 75%,
+        rgba(102, 126, 234, 0.4) 100%);
+      border-radius: 32px;
+      z-index: -1;
+      opacity: 0;
+      transition: opacity 0.4s ease;
+      animation: rotateGlow 8s linear infinite;
     }
 
     .app-icon::before {
@@ -115,8 +138,16 @@
     }
 
     .app-icon:hover {
-      transform: scale(1.05);
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15), 0 6px 20px rgba(0, 0, 0, 0.1);
+      transform: scale(1.08) translateY(-5px);
+      box-shadow: 
+        0 25px 50px rgba(0, 0, 0, 0.2),
+        0 10px 25px rgba(0, 0, 0, 0.15),
+        inset 0 1px 2px rgba(255, 255, 255, 0.95);
+      animation-play-state: paused;
+    }
+
+    .app-icon:hover::after {
+      opacity: 0.8;
     }
 
     .app-icon:hover img {
@@ -453,6 +484,19 @@
     @keyframes staggeredFadeIn {
       0% { opacity: 0; transform: translateY(20px) scale(0.8); }
       100% { opacity: 1; transform: translateY(0) scale(1); }
+    }
+
+    /* App Icon Animations */
+    @keyframes iconFloat {
+      0%, 100% { transform: translateY(0px) rotate(0deg); }
+      25% { transform: translateY(-8px) rotate(1deg); }
+      50% { transform: translateY(-12px) rotate(0deg); }
+      75% { transform: translateY(-8px) rotate(-1deg); }
+    }
+
+    @keyframes rotateGlow {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     /* Responsive Design */
