--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
       border-radius: 12px;
       filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
       transition: all 0.3s ease;
+      display: block;
+      max-width: 100px;
+      max-height: 100px;
     }
 
     .app-icon:hover {
