--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
       overflow: hidden;
       position: relative;
     }
+    
+    /* Enhanced Creative Background Effects */
+    body::after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: 
+        radial-gradient(circle at 25% 25%, rgba(255, 255, 255, 0.1) 0%, transparent 50%),
+        radial-gradient(circle at 75% 75%, rgba(255, 255, 255, 0.08) 0%, transparent 50%),
+        linear-gradient(45deg, transparent 40%, rgba(255, 255, 255, 0.03) 50%, transparent 60%);
+      animation: backgroundShimmer 12s ease-in-out infinite;
+      pointer-events: none;
+      z-index: 1;
+    }
 
     /* Animated Background Particles */
     body::before {
@@ -187,18 +204,26 @@
     }
 
     .app-name {
-      font-size: 18px;
-      font-weight: 500;
-      color: #2c3e50;
-      margin-bottom: 8px;
+      font-size: 24px;
+      font-weight: 700;
+      background: linear-gradient(135deg, #2c3e50 0%, #3498db 50%, #9b59b6 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin-bottom: 12px;
+      animation: textGlow 3s ease-in-out infinite;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .app-description {
-      font-size: 14px;
-      color: #7f8c8d;
+      font-size: 16px;
+      color: #5a6c7d;
       margin-bottom: 32px;
-      max-width: 280px;
-      line-height: 1.5;
+      max-width: 320px;
+      line-height: 1.6;
+      font-weight: 400;
+      text-align: center;
+      opacity: 0.9;
     }
 
     .launch-button {
